--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BlocAD</string>
+
+    <string-array name="cities">
+        <item>Turda</item>
+        <item>Campia Turzii</item>
+        <item>Cluj Napoca</item>
+    </string-array>
+
 </resources>
